--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100&display=swap');
- 
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); 
 *{
     margin: 0;
     padding: 0;
@@ -19,10 +19,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* background: rgb(140, 206, 241); */ /* azul-claro */
-  /* background: rgb(67, 173, 243); */ /* azul-mas oscuro */
- /*  background: rgb(24, 52, 146); */
-  /* background:rgb(12, 35, 98); */
   overflow: hidden;
   width: 100vw;
   height: 100vh;
@@ -42,7 +38,7 @@
 .titulo{
   text-transform: uppercase;
   font-size: 2.3rem;
-  font-weight: bold; 
+  font-weight: normal; 
   color: #ffe221;
 }
 .titulo .letra{
@@ -62,6 +58,7 @@
     height: auto;
 }
 .container_text p{
+  font-weight: lighter;
   margin-top: 1.2rem;
   -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%);
   clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%);
@@ -73,9 +70,10 @@
      animation:sectionAnimation 5s  forwards;
 }
 .container_text a{
+  font-family: 'Caveat', cursive;
   text-decoration: none; 
-  color: rgb(255, 81, 0);
-  font-weight:bolder;
+  color: rgb(255, 255, 255);
+  font-weight:200;
   font-size: 1.4rem;
   /* color: rgb(0, 17, 255); */
   opacity: 0;
@@ -243,11 +241,14 @@
   }
   .about_me{
     font-size: 1.1rem;
+    font-weight: bold;
     text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.5);
   }
   .titulo{
     font-size: 1.8rem;
+    font-weight: 500;
   }
+ 
 }
 
 
