--- a/inicio_home/inicio_texto.css
+++ b/inicio_home/inicio_texto.css
@@ -31,6 +31,7 @@ h1, h2{
 }  
   
 .texto {
+  font-weight: lighter;
   width: 100%;
   float: left;
   color: #ffffff;
@@ -61,6 +62,7 @@ h1, h2{
 }
 
 .primero span:last-child{
+        font-weight: lighter;
     color:#ffe221;
     -webkit-animation-delay: 1.5s;
             animation-delay: 1.5s;
@@ -85,6 +87,7 @@ h1, h2{
           animation-delay: 4.2s;
 }
 .segundo strong{
+  font-weight: normal;
   color: #ffe221;
   letter-spacing: 3px;
 }
