--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -466,7 +466,17 @@
 }
 
 @media only screen and (max-width:450px) and ( orientation: portrait){ 
+  .container_rocket {
+    /* background: rgba(255, 0, 0, 0.452); */
+    width: 70px;
+    height: 100px;
+  }
 
-
+  .flame-wrapper{
+    width: 20px;
+    height: 30px;
+    top: 6.5rem;
+    left: 16%;
+  }
 }
 
