--- a/works/works.css
+++ b/works/works.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 
 * {
   margin: 0;
@@ -28,11 +28,11 @@
 .container_works {
 /*   background: #e9ff70; */
   font-family: 'DM Sans', sans-serif;
-  padding: 1rem;
+  
     height: 800px;
     margin: 0;
     display: grid;
-    grid-template-rows: 500px 100px 200px;
+    grid-template-rows: 1fr 400px 100px 1fr;
     grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
     align-items: center;
     justify-items: center;
@@ -40,7 +40,7 @@
 
 /*  */
   main#carousel {
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
     grid-column: 1 / 8;
     width: 100vw;
     height: 500px;
@@ -54,6 +54,13 @@
     --middle: 3;
     --position: 1;
     pointer-events: none;
+  }
+  .container_works .titulo{
+    grid-row:1/2;
+    grid-column:2/7;
+    color: #ffd670;
+    font-family: 'Jost', sans-serif;
+    font-size: 1.7rem;
   }
   
   .item {
@@ -100,7 +107,7 @@
   
   input:nth-of-type(1) {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
   input:nth-of-type(1):checked ~ main#carousel {
     --position: 1;
@@ -108,7 +115,7 @@
   
   input:nth-of-type(2) {
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
   input:nth-of-type(2):checked ~ main#carousel {
     --position: 2;
@@ -116,7 +123,7 @@
   
   input:nth-of-type(3) {
     grid-column: 4 /5;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
   input:nth-of-type(3):checked ~ main#carousel {
     --position: 3;
@@ -124,7 +131,7 @@
   
   input:nth-of-type(4) {
     grid-column: 5 / 6;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
   input:nth-of-type(4):checked ~ main#carousel {
     --position: 4;
@@ -132,15 +139,17 @@
   
   input:nth-of-type(5) {
     grid-column: 6 / 7;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
   input:nth-of-type(5):checked ~ main#carousel {
     --position: 5;
   }
-/*  */
+
+
+/* ----------info--------- */
 
 .container_info {
-  grid-row:3/4;
+  grid-row:4/5;
   grid-column:3/6;
   /* background-color: #fff; */
   border-radius: 8px;
@@ -228,7 +237,17 @@
 @media only screen and (max-width:450px){
   .container_works {
       height: 700px;
-      grid-template-rows: 500px 50px 150px;
-      grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
     }
+    main#carousel {
+      width: 100vw;
+      height: 350px;
+   }
+   .item {
+    position: absolute;
+    width: 250px;
+    height: 350px;
+   }
+   .container_works .titulo{
+    font-weight: normal;
+  }
 }
