--- a/inicio_home/inicio_chica.css
+++ b/inicio_home/inicio_chica.css
@@ -4,6 +4,8 @@
   }
 .container_chica{
     /* background: rgba(255, 0, 0, 0.294); */
+    max-width: 1100px;
+    max-height: 900px;
     width: 60vw;
     height: 80vh;
     overflow: hidden;
