--- a/works/works.css
+++ b/works/works.css
@@ -65,7 +65,7 @@
   
   .item {
     position: absolute;
-    width: 300px;
+    width: 200px;
     height: 400px;
     border-radius: 10px;
     background-color: coral;
@@ -82,6 +82,14 @@
     -moz-transform: rotateY(calc(-10deg * var(--r)))      translateX(calc(-300px * var(--r)));
     -ms-transform: rotateY(calc(-10deg * var(--r)))      translateX(calc(-300px * var(--r)));
     -o-transform: rotateY(calc(-10deg * var(--r)))      translateX(calc(-300px * var(--r)));
+}
+video{
+   height: 100%;
+   border-radius: 10px;
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   -ms-border-radius: 10px;
+   -o-border-radius: 10px;
 }
   
   .item:nth-of-type(1) {
