--- a/works/works.css
+++ b/works/works.css
@@ -83,7 +83,9 @@
     -ms-transform: rotateY(calc(-10deg * var(--r)))      translateX(calc(-300px * var(--r)));
     -o-transform: rotateY(calc(-10deg * var(--r)))      translateX(calc(-300px * var(--r)));
 }
+
 video{
+   z-index: 1;
    height: 100%;
    border-radius: 10px;
    -webkit-border-radius: 10px;
@@ -91,6 +93,12 @@ video{
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
 }
+.video_willy_wonka{
+  margin-top: 40%;
+  height: auto;
+  width: 100%;
+}
+
   
   .item:nth-of-type(1) {
     --offset: 1;
@@ -110,7 +118,7 @@ video{
   }
   .item:nth-of-type(5) {
     --offset: 5;
-    background-color: #e9ff70;
+    background-color: #686868;
   }
   
   input:nth-of-type(1) {
@@ -160,10 +168,10 @@ video{
   grid-row:4/5;
   grid-column:3/6;
   /* background-color: #fff; */
-  border-radius: 8px;
+  /* border-radius: 8px; */
   width:300px;
-  min-width: 320px;
-  padding: 16px 10px;
+  min-width: 330px;
+  /* padding: 16px 10px; */
 }
 
 .upper-part {
@@ -175,21 +183,26 @@ video{
   overflow: hidden;
 }
 
-.play-icon{ margin-right: 10px; }
 
 .work-info {
+  /* background: #ff70a6; */
   width: calc(100% - 32px);
   display: block;
 }
 
 .work-info .title {
   color: #ffffff;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 24px;
   word-spacing: 2px;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
+}
+.work-info .title a{
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .sub-line {
