--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -20,12 +20,12 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   color: white;
   font-family: 'Jost', sans-serif;
   text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: bold; 
   -moz-animation: bg_about_me 27s forwards; /* Firefox */
   -webkit-animation: bg_about_me 27s forwards; /* Safari and Chrome */
@@ -225,12 +225,11 @@
     height: auto;
   }
   .about_me{
-    font-size: 1.7rem;
     text-shadow: -1px 2px 2px rgba(50, 50, 0, 0.5);
   }
-  .titulo{
+  /* .titulo{
     font-size: 2.2rem;
-  }
+  } */
 }
 
 @media only screen and (max-width:450px) and ( orientation: portrait){
