--- a/works/works.css
+++ b/works/works.css
@@ -174,6 +174,7 @@ video{
 }
 
 .upper-part {
+ /*  background: #686868; */
   position: relative;
   display: flex;
   align-items: center;
@@ -185,13 +186,12 @@ video{
 
 .work-info {
   /* background: #ff70a6; */
-  width: calc(100% - 32px);
-  display: block;
+ /*  width: calc(100% - 32px); */
+  /* display: block; */
 }
 
 .work-info .title {
   color: #ffffff;
-  font-size: 1rem;
   line-height: 24px;
   word-spacing: 0px;
   text-transform: uppercase;
@@ -275,8 +275,6 @@ video{
    .container_works .titulo{
     font-weight: normal;
   }
-  .work-info {
-    text-align: center;
-  }
+  
 
 }
