--- a/inicio_home/inicio_chica.css
+++ b/inicio_home/inicio_chica.css
@@ -1,4 +1,4 @@
-#inicio{
+#inicio_chica{
     width: 100%;
     height: 100%;
   }
@@ -405,14 +405,6 @@
     -webkit-animation:bounceIn 1s 6s forwards ; /* Safari and Chrome */ /* Opera */
     animation: bounceIn 1s 6s forwards ;
   }
-  .sillon{ /* Firefox */
-    -webkit-animation:fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s; /* Safari and Chrome */ /* Opera */
-    animation: fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s;
-  }
-  .sillon_delante{ /* Firefox */
-    -webkit-animation:fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s; /* Safari and Chrome */ /* Opera */
-    animation: fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s;
-  }
   .window{ /* Firefox */
     -webkit-animation:bounceIn .7s 16s forwards, bg_window 20s 16s infinite; /* Safari and Chrome */ /* Opera */
     animation:bounceIn .7s 16s forwards, bg_window 20s 16s infinite;
@@ -433,8 +425,7 @@
     -webkit-animation:appear 0.7s 26s forwards; /* Safari and Chrome */ /* Opera */
     animation: appear 0.7s 26s forwards;
   }
-  
-  
+
   /* .container_bocadillo,.container_bocadillo::after,.container_bocadillo::before{
     animation: bounceIn 1s 19s forwards ;
   } */
@@ -444,3 +435,21 @@
       typing 3.5s 19s steps(30, end),
       blink-caret .5s 19s step-end infinite;
   } */
+
+
+  /* ------------HOME--active---------- */
+  .section-img.active{ /* Firefox */
+    -webkit-animation:bounceIn 1s 0.5 forwards ; /* Safari and Chrome */ /* Opera */
+    animation: bounceIn 1s 0.5 forwards ;
+  }
+
+  .window.active{ /* Firefox */
+    -webkit-animation:bounceIn .7s 1s forwards, bg_window 20s 1s infinite; /* Safari and Chrome */ /* Opera */
+    animation:bounceIn .7s 1s forwards, bg_window 20s 1s infinite;
+  }
+  .chica.active{
+    -webkit-animation-delay: 1.8s;
+            animation-delay: 1.8s;
+  }
+ 
+
