--- a/inicio_home/svg.css
+++ b/inicio_home/svg.css
@@ -51,6 +51,23 @@
     -webkit-animation: draw 4s 13s linear forwards; /* Safari and Chrome */ /* Opera */
     animation: draw 4s 13s linear forwards;  
 }
+
+/* -----------Home active------------ */
+.sillon_uno.active{
+    /*Firefox*/-webkit-animation: draw 6s ease-in-out forwards;
+    /*SafariandChrome*//*Opera*/animation: draw 6s ease-in-out forwards;
+    -webkit-animation: draw 6s ease-in-out forwards;
+}
+.sillon_dos.active{
+    -webkit-animation: draw 6s ease-in-out forwards;
+    animation: draw 6s ease-in-out forwards;
+    -webkit-animation: draw 6s ease-in-out forwards;
+}
+
+.planta_baja.active{ /* Firefox */
+    -webkit-animation: draw 4s 1s linear forwards; /* Safari and Chrome */ /* Opera */
+    animation: draw 4s 1s linear forwards;  
+}
 /* ---------------------CONTACTO-------------- */
 #linkedin{
     width: 60%;
