--- a/inicio_home/window.css
+++ b/inicio_home/window.css
@@ -39,8 +39,8 @@
   top: 15px;
   left: 8px;
   box-shadow: 5px -12px 0 -2px #ccc, 4px 10px 0 -4px #ccc;
-  animation: hide 20s 15s infinite;
-  -webkit-animation:hide 20s 15s infinite;
+  animation: hide 20s 11.3s infinite;
+  -webkit-animation: hide 20s 11.3s infinite;
 }
 .star {
   height: 3px;
@@ -148,20 +148,16 @@
     position: absolute;
     height: 1px;
     width: 70px;
-    background: linear-gradient(
-      90deg,
-      rgba(200, 200, 255, 0.1),
-      rgba(220, 220, 255, 0.6)
-    );
+    background: linear-gradient(      90deg,      rgba(200, 200, 255, 0.1),      rgba(220, 220, 255, 0.6)    );
     transform: rotate(35deg);
     -webkit-transform: rotate(35deg);
     top: 30px;
     left: 50px;
     border-radius: 100%;
     opacity: 0;
-    animation: shoot 6s linear infinite, hide 20s 15s infinite;
-    -webkit-animation: shoot 6s linear infinite, hide 20s 15s infinite;
-  }
+    animation: shoot 6s linear infinite, hide_star 20s 12.5s infinite;
+    -webkit-animation: shoot 6s linear infinite, hide_star 20s 12.5s infinite;
+}
   @keyframes shoot {
     25% {
       transform: rotate(35deg) translate(880px, 0);
@@ -276,18 +272,32 @@
   }
 
   @-webkit-keyframes hide {
-      0%{
-        opacity: 1;
-      }
-      35%,80%{
-        opacity: 0;
-      }
-      90%,100%{
-        opacity: 1;
-      }
+    0%{
+      opacity: 1;
+    }
+    10%,65%{
+      opacity: 0;
+    }
+    70%{
+      opacity: 1;
+    }
   }
 
   @keyframes hide {
+   
+    0%{
+      opacity: 1;
+    }
+    10%,65%{
+      opacity: 0;
+    }
+    70%{
+      opacity: 1;
+    }
+  }
+
+  @keyframes hide_star {
+   
       0%{
         opacity: 1;
       }
