--- a/works/works.css
+++ b/works/works.css
@@ -28,19 +28,19 @@
 .container_works {
 /*   background: #e9ff70; */
   font-family: 'DM Sans', sans-serif;
-    height: 800px;
-    margin: 0;
-    display: grid;
-    grid-template-rows: 1fr 400px 100px 1fr;
-    grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
-    align-items: center;
-    justify-items: center;
+  height: 800px;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 1fr 400px 100px 1fr;
+  grid-template-columns: 1fr 30px 30px 30px 30px 30px 30px 1fr;
+  align-items: center;
+  justify-items: center;
 }
 
 /*  */
   main#carousel {
     grid-row: 2 / 3;
-    grid-column: 1 / 8;
+    grid-column: 1 / 9;
     width: 100vw;
     height: 500px;
     display: flex;
@@ -56,7 +56,7 @@
   }
   .container_works .titulo{
     grid-row:1/2;
-    grid-column:2/7;
+    grid-column:2/8;
     color: #ffd670;
     font-family: 'Jost', sans-serif;
     font-size: 1.7rem;
@@ -119,6 +119,10 @@ video{
     --offset: 5;
     background-color: #686868;
   }
+  .item:nth-of-type(6) {
+    --offset: 6;
+    background-color: #1b2c52;
+  }
   
   input:nth-of-type(1) {
     grid-column: 2 / 3;
@@ -160,17 +164,26 @@ video{
     --position: 5;
   }
 
+  input:nth-of-type(6) {
+    grid-column: 7 / 8;
+    grid-row: 3 / 4;
+  }
+  input:nth-of-type(6):checked ~ main#carousel {
+    --position: 6;
+  }
+ 
+
 
 /* ----------info--------- */
 
 .container_info {
   grid-row:4/5;
-  grid-column:3/6;
-  /* background-color: #fff; */
-  /* border-radius: 8px; */
+  grid-column:2/8;
+  border:1px solid #fff;
+  border-radius: 8px;
   width:auto;
   min-width: 380px;
-  /* padding: 16px 10px; */
+  padding: 10px 5px;
 }
 
 .upper-part {
@@ -206,7 +219,32 @@ video{
 .work-info .title a span{
   color: #ffd670;
   text-transform: lowercase;
+  animation: flash 2.5s ease-in-out infinite ;
+  -webkit-animation: flash 2.5s ease-in-out infinite ;
+}
+@-webkit-keyframes flash {
+  from,
+  50%,
+  to {
+    opacity: 1;
+  }
 
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+@keyframes flash {
+  from,
+  50%,
+  to {
+    opacity: 1;
+  }
+
+  25%,
+  75% {
+    opacity: 0;
+  }
 }
 .sub-line {
   display: flex;
@@ -255,6 +293,14 @@ video{
 #item-5:checked ~ .container_info #test  {
   transform: translateY(-160px);
 }
+#item-6:checked ~ .container_info #test  {
+  transform: translateY(-200px);
+  -webkit-transform: translateY(-200px);
+  -moz-transform: translateY(-200px);
+  -ms-transform: translateY(-200px);
+  -o-transform: translateY(-200px);
+}
+
 
 /* --------------@Media------------- */
 
