--- a/works/works.css
+++ b/works/works.css
@@ -31,7 +31,7 @@
   height: 800px;
   margin: 0;
   display: grid;
-  grid-template-rows: 1fr 400px 100px 1fr;
+  grid-template-rows: 1fr 100px 30px 400px 100px 1fr;
   grid-template-columns: 1fr 30px 30px 30px 30px 30px 30px 1fr;
   align-items: center;
   justify-items: center;
@@ -39,7 +39,7 @@
 
 /*  */
   main#carousel {
-    grid-row: 2 / 3;
+    grid-row: 4 / 5;
     grid-column: 1 / 9;
     width: 100vw;
     height: 500px;
@@ -60,6 +60,17 @@
     color: #ffd670;
     font-family: 'Jost', sans-serif;
     font-size: 1.7rem;
+  }
+  .subtitulo{
+    color: white;
+    grid-row:2/3;
+    grid-column:1/9;
+    max-width: 520px;
+    min-width: 360px;
+    padding: 10px;
+    text-align: center;
+    font-family: 'Jost', sans-serif;
+    letter-spacing: 1px;
   }
   
   .item {
@@ -97,6 +108,10 @@ video{
   height: auto;
   width: 100%;
 }
+.cuentacuentos{
+  filter: saturate(1.2) brightness(1.1);
+  -webkit-filter: saturate(1.2) brightness(1.1);
+}
 
   
   .item:nth-of-type(1) {
@@ -126,7 +141,7 @@ video{
   
   input:nth-of-type(1) {
     grid-column: 2 / 3;
-    grid-row: 3 / 4;
+    grid-row: 5/6;
   }
   input:nth-of-type(1):checked ~ main#carousel {
     --position: 1;
@@ -134,7 +149,7 @@ video{
   
   input:nth-of-type(2) {
     grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    grid-row: 5/6;
   }
   input:nth-of-type(2):checked ~ main#carousel {
     --position: 2;
@@ -142,7 +157,7 @@ video{
   
   input:nth-of-type(3) {
     grid-column: 4 /5;
-    grid-row: 3 / 4;
+    grid-row: 5/6;
   }
   input:nth-of-type(3):checked ~ main#carousel {
     --position: 3;
@@ -150,7 +165,7 @@ video{
   
   input:nth-of-type(4) {
     grid-column: 5 / 6;
-    grid-row: 3 / 4;
+    grid-row: 5/6;
   }
   input:nth-of-type(4):checked ~ main#carousel {
     --position: 4;
@@ -158,7 +173,7 @@ video{
   
   input:nth-of-type(5) {
     grid-column: 6 / 7;
-    grid-row: 3 / 4;
+    grid-row: 5/6;
   }
   input:nth-of-type(5):checked ~ main#carousel {
     --position: 5;
@@ -166,7 +181,7 @@ video{
 
   input:nth-of-type(6) {
     grid-column: 7 / 8;
-    grid-row: 3 / 4;
+    grid-row: 5/6;
   }
   input:nth-of-type(6):checked ~ main#carousel {
     --position: 6;
@@ -177,12 +192,12 @@ video{
 /* ----------info--------- */
 
 .container_info {
-  grid-row:4/5;
+  grid-row:6/7;
   grid-column:2/8;
   border:1px solid #fff;
   border-radius: 8px;
   width:auto;
-  min-width: 380px;
+  min-width: 360px;
   padding: 10px 5px;
 }
 
@@ -308,24 +323,32 @@ video{
   .container_works {
     /*   background: #e9ff70; */
     height: 600px;
-    grid-template-rows: 2.5fr 400px 30px 30px 1.5fr;
+    grid-template-rows: 1fr 120px 10px 300px 50px 1fr;
+    /* grid-template-rows: 2.5fr 400px 30px 30px 1.5fr; */
   }  
-  .container_info {
-    grid-row:5/6;
-
-  }
   .item {
-    height: 370px;
-  }    
+    height: 300px;
+    width: auto;
+  } 
+  .video_willy_wonka{
+    height: 300px;
+    width: 160px;
+    margin-top: -20px;
+  }   
   main#carousel{
    /*  background: #90f1ef; */
-    height: 80vh;
+    height: 70vh;
+  } 
+  .container_works .subtitulo{
+    font-size: 14px;
+    font-weight: lighter;
   }
-  .container_works{
-    margin-top: -50px;
-  }  
   .container_works .titulo{
     font-weight: normal;
+  }
+  .container_info {
+    padding: 5px 0px;
+  
   }
   
 
