--- a/works/works.css
+++ b/works/works.css
@@ -32,7 +32,7 @@
   margin: 0;
   display: grid;
   grid-template-rows: 1fr 100px 30px 400px 100px 1fr;
-  grid-template-columns: 1fr 30px 30px 30px 30px 30px 30px 1fr;
+  grid-template-columns: 1fr 30px 30px 30px 30px 30px 30px 30px 1fr;
   align-items: center;
   justify-items: center;
 }
@@ -40,7 +40,7 @@
 /*  */
   main#carousel {
     grid-row: 4 / 5;
-    grid-column: 1 / 9;
+    grid-column: 1 / 10;
     width: 100vw;
     height: 500px;
     display: flex;
@@ -56,7 +56,7 @@
   }
   .container_works .titulo{
     grid-row:1/2;
-    grid-column:2/8;
+    grid-column:2/9;
     color: #ffd670;
     font-family: 'Jost', sans-serif;
     font-size: 1.7rem;
@@ -64,7 +64,7 @@
   .subtitulo{
     color: white;
     grid-row:2/3;
-    grid-column:1/9;
+    grid-column:1/10;
     max-width: 520px;
     min-width: 360px;
     padding: 10px;
@@ -136,6 +136,10 @@ video{
   }
   .item:nth-of-type(6) {
     --offset: 6;
+    background-color: #95a7ce;
+  }
+  .item:nth-of-type(7) {
+    --offset: 7;
     background-color: #1b2c52;
   }
   
@@ -185,6 +189,13 @@ video{
   }
   input:nth-of-type(6):checked ~ main#carousel {
     --position: 6;
+  }
+  input:nth-of-type(7) {
+    grid-column: 8 / 9;
+    grid-row: 5/6;
+  }
+  input:nth-of-type(7):checked ~ main#carousel {
+    --position: 7;
   }
  
 
